get rid of central client