@@ -17,7 +17,16 @@
  */
 package io.ballerina.projects;
 
-import com.google.gson.JsonSyntaxException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
+
 import io.ballerina.projects.DependencyGraph.DependencyGraphBuilder;
 import io.ballerina.projects.environment.ModuleLoadRequest;
 import io.ballerina.projects.environment.PackageCache;
@@ -37,12 +46,12 @@ import io.ballerina.projects.internal.PackageDiagnostic;
 import io.ballerina.projects.internal.ProjectDiagnosticErrorCode;
 import io.ballerina.projects.internal.ResolutionEngine;
 import io.ballerina.projects.internal.ResolutionEngine.DependencyNode;
-import io.ballerina.projects.internal.model.BuildJson;
 import io.ballerina.projects.internal.repositories.CustomPkgRepositoryContainer;
 import io.ballerina.projects.internal.repositories.LocalPackageRepository;
 import io.ballerina.projects.internal.repositories.MavenPackageRepository;
 import io.ballerina.projects.util.ProjectUtils;
 import io.ballerina.tools.diagnostics.Diagnostic;
+import io.ballerina.tools.diagnostics.DiagnosticFactory;
 import io.ballerina.tools.diagnostics.DiagnosticInfo;
 import io.ballerina.tools.diagnostics.DiagnosticSeverity;
 import io.ballerina.tools.diagnostics.Location;
@@ -50,28 +59,7 @@ import org.ballerinalang.util.diagnostic.DiagnosticErrorCode;
 import org.wso2.ballerinalang.compiler.util.Names;
 import org.wso2.ballerinalang.util.RepoUtils;
 
-import java.io.IOException;
-import java.io.PrintStream;
-import io.ballerina.fs.Paths;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import static io.ballerina.projects.util.ProjectConstants.BALLERINA_HOME;
-import static io.ballerina.projects.util.ProjectConstants.BUILD_FILE;
-import static io.ballerina.projects.util.ProjectConstants.DEPENDENCIES_TOML;
-import static io.ballerina.projects.util.ProjectConstants.EQUAL;
-import static io.ballerina.projects.util.ProjectConstants.LOCKING_MODE_OPTION;
-import static io.ballerina.projects.util.ProjectConstants.OFFLINE_FLAG;
-import static io.ballerina.projects.util.ProjectConstants.REPOSITORY_FLAG;
-import static io.ballerina.projects.util.ProjectUtils.getWarningForHigherDistribution;
-import static io.ballerina.projects.util.ProjectUtils.isNewUpdateDistribution;
+import static io.ballerina.projects.util.ProjectConstants.DOT;
 
 /**
  * Resolves dependencies and handles version conflicts in the dependency graph.
@@ -83,24 +71,23 @@ public class PackageResolution {
     private final BlendedManifest blendedManifest;
     private final DependencyGraph<ResolvedPackageDependency> dependencyGraph;
     private final CompilationOptions compilationOptions;
-    private ResolutionOptions resolutionOptions;
+    private final ResolutionOptions resolutionOptions;
     private final PackageResolver packageResolver;
     private final ModuleResolver moduleResolver;
     private final List<Diagnostic> diagnosticList;
     private DiagnosticResult diagnosticResult;
+    private boolean autoUpdate;
     private String dependencyGraphDump;
 
     private List<ModuleContext> topologicallySortedModuleList;
     private Collection<ResolvedPackageDependency> dependenciesWithTransitives;
-    private List<String> imports;
 
-    private static final Boolean isWindows = System.getProperty("os.name").toLowerCase(Locale.getDefault())
-            .contains("win");
+    private static final Boolean isWindows = false;
     private PackageResolution(PackageContext rootPackageContext, CompilationOptions compilationOptions) {
         this.rootPackageContext = rootPackageContext;
         this.diagnosticList = new ArrayList<>();
         this.compilationOptions = compilationOptions;
-        this.resolutionOptions = getResolutionOptions(compilationOptions);
+        this.resolutionOptions = getResolutionOptions(rootPackageContext, compilationOptions);
         ProjectEnvironment projectEnvContext = rootPackageContext.project().projectEnvironmentContext();
         this.packageResolver = projectEnvContext.getService(PackageResolver.class);
         this.blendedManifest = createBlendedManifest(rootPackageContext, projectEnvContext,
@@ -116,12 +103,21 @@ public class PackageResolution {
         }
     }
 
+    /**
+     * This method performs the BIR generation before the compilation by
+     * spinning up a new process.
+     * This is typically useful for large packages to avoid OOM issues.
+     */
+    private void generateCaches() {
+        throw new RuntimeException();
+    }
+
     private PackageResolution(PackageResolution packageResolution, PackageContext rootPackageContext,
                               CompilationOptions compilationOptions) {
         this.rootPackageContext = rootPackageContext;
         this.diagnosticList = new ArrayList<>();
         this.compilationOptions = compilationOptions;
-        this.resolutionOptions = packageResolution.resolutionOptions;
+        this.resolutionOptions = getResolutionOptions(rootPackageContext, compilationOptions);
         ProjectEnvironment projectEnvContext = rootPackageContext.project().projectEnvironmentContext();
         this.packageResolver = projectEnvContext.getService(PackageResolver.class);
         this.blendedManifest = createBlendedManifest(rootPackageContext, projectEnvContext,
@@ -136,72 +132,6 @@ public class PackageResolution {
         DependencyResolution dependencyResolution = new DependencyResolution(
                 projectEnvContext.getService(PackageCache.class), moduleResolver, dependencyGraph);
         resolveDependencies(dependencyResolution);
-    }
-
-    /**
-     * This method performs the BIR generation before the compilation by
-     * spinning up a new process.
-     * This is typically useful for large packages to avoid OOM issues.
-     */
-    private void generateCaches() {
-        for (ResolvedPackageDependency resolvedPackageDependency : this.dependencyGraph.toTopologicallySortedList()) {
-            Package packageInstance = resolvedPackageDependency.packageInstance();
-
-            // If the package instance is the current package, we have reached the root of the dependency graph.
-            // We skip the generation of the cache for the current package.
-            PackageDescriptor packageDescriptor = packageInstance.descriptor();
-            if (packageDescriptor == this.rootPackageContext.descriptor()) {
-                break;
-            }
-
-            // If the dependency is not loaded from sources, then we assume that the BIR is already generated.
-            // We skip the cache generation for the particular dependency.
-            if (packageInstance.getDefaultModule().moduleContext()
-                    .currentCompilationState() != ModuleCompilationState.LOADED_FROM_SOURCES) {
-                continue;
-            }
-
-            if (packageInstance.project().kind().equals(ProjectKind.BUILD_PROJECT)) {
-                continue;
-            }
-
-            // We use the pull command to generate the BIR of the dependency.
-            List<String> cmdArgs = new ArrayList<>();
-            String balExecutable = isWindows ? "bal.bat" : "bal";
-            cmdArgs.add(Paths.get(System.getProperty(BALLERINA_HOME), "bin", balExecutable).toString());
-            cmdArgs.add("pull");
-            cmdArgs.add(LOCKING_MODE_OPTION + EQUAL + resolutionOptions.packageLockingMode().toString());
-            cmdArgs.add(OFFLINE_FLAG + EQUAL + resolutionOptions.offline());
-
-            // Specify which repository to resolve the dependency from
-            Optional<BlendedManifest.Dependency> dependency =
-                    blendedManifest.userSpecifiedDependency(packageDescriptor.org(), packageDescriptor.name());
-            if (dependency.isPresent() && dependency.get().repository() != null) {
-                cmdArgs.add(REPOSITORY_FLAG + EQUAL + dependency.get().repository());
-            }
-            cmdArgs.add(packageDescriptor.toString());
-
-            ProcessBuilder processBuilder = new ProcessBuilder(cmdArgs);
-            try {
-                Process process = processBuilder.start();
-                int i = process.waitFor();
-                if (i != 0) {
-                    String errMessage = packageDescriptor.toString();
-                    if (dependency.isPresent()) {
-                        errMessage += " [repository=" + dependency.get().repository() + "]";
-                    }
-                    throw new ProjectException("failed to compile " + errMessage);
-                }
-            } catch (IOException | InterruptedException e) {
-                throw new ProjectException(e);
-            }
-
-            // Finally, we set the compilation state of the dependency to LOADED_FROM_CACHE
-            for (ModuleId moduleId : packageInstance.moduleIds()) {
-                packageInstance.module(moduleId).moduleContext()
-                        .setCompilationState(ModuleCompilationState.LOADED_FROM_CACHE);
-            }
-        }
     }
 
     private DependencyGraph<ResolvedPackageDependency> cloneDependencyGraphNewRoot
@@ -259,17 +189,8 @@ public class PackageResolution {
                 .stream()
                 // Remove root package from this list.
                 .filter(resolvedPkg -> resolvedPkg.packageId() != rootPackageContext.packageId())
-                .toList();
+                .collect(Collectors.toList());
         return dependenciesWithTransitives;
-    }
-
-    /**
-     * Print the final dependency graph to the provided print stream.
-     *
-     * @param printStream print stream
-     */
-    public void dumpGraphs(PrintStream printStream) {
-        printStream.append(this.dependencyGraphDump);
     }
 
     PackageContext packageContext() {
@@ -288,17 +209,16 @@ public class PackageResolution {
     }
 
     void reportDiagnostic(String message, String diagnosticErrorCode, DiagnosticSeverity severity, Location location,
-                          PackageDescriptor packageDescriptor) {
+                          ModuleDescriptor moduleDescriptor) {
         var diagnosticInfo = new DiagnosticInfo(diagnosticErrorCode, message, severity);
-        PackageDiagnostic diagnostic = new PackageDiagnostic(diagnosticInfo,
-                packageDescriptor.name().toString());
-        this.diagnosticList.add(diagnostic);
+        var diagnostic = DiagnosticFactory.createDiagnostic(diagnosticInfo, location);
+        var packageDiagnostic = new PackageDiagnostic(diagnostic, moduleDescriptor, rootPackageContext.project());
+        this.diagnosticList.add(packageDiagnostic);
         this.diagnosticResult = new DefaultDiagnosticResult(this.diagnosticList);
     }
 
-    @Deprecated(forRemoval = true, since = "2201.13.0")
     public boolean autoUpdate() {
-        return true;
+        return autoUpdate;
     }
 
     /**
@@ -317,9 +237,7 @@ public class PackageResolution {
      */
     private DependencyGraph<ResolvedPackageDependency> buildDependencyGraph() {
         // TODO We should get diagnostics as well. Need to design that contract
-        if (rootPackageContext.project().kind() == ProjectKind.BALA_PROJECT &&
-                (PackageLockingMode.HARD.equals(this.resolutionOptions.packageLockingMode()) ||
-                        PackageLockingMode.LOCKED.equals(this.resolutionOptions.packageLockingMode()))) {
+        if (rootPackageContext.project().kind() == ProjectKind.BALA_PROJECT && this.resolutionOptions.sticky()) {
             return resolveBALADependencies();
         } else {
             return resolveSourceDependencies();
@@ -342,8 +260,8 @@ public class PackageResolution {
         if (rootPackageContext.project().buildOptions().observabilityIncluded()) {
             String moduleName = Names.OBSERVE.getValue();
             ModuleLoadRequest observeModuleLoadReq = new ModuleLoadRequest(
-                        PackageOrg.from(Names.BALLERINA_INTERNAL_ORG.value), moduleName,
-                        PackageDependencyScope.DEFAULT, DependencyResolutionType.PLATFORM_PROVIDED);
+                    PackageOrg.from(Names.BALLERINA_INTERNAL_ORG.value), moduleName,
+                    PackageDependencyScope.DEFAULT, DependencyResolutionType.PLATFORM_PROVIDED);
             allModuleLoadRequests.add(observeModuleLoadReq);
         }
 
@@ -369,123 +287,11 @@ public class PackageResolution {
                 packageResolver);
     }
 
-    private void updateResolutionOptions() {
-        Project project = this.rootPackageContext.project();
-
-        if (project.kind() == ProjectKind.SINGLE_FILE_PROJECT) {
-            this.resolutionOptions = ResolutionOptions.builder()
-                    .setOffline(resolutionOptions.offline())
-                    .setDumpGraph(resolutionOptions.dumpGraph())
-                    .setDumpRawGraphs(resolutionOptions.dumpRawGraphs())
-                    .setPackageLockingMode(PackageLockingMode.SOFT)
-                    .build();
-            return;
-        }
-
-        PackageLockingMode packageLockingMode = resolutionOptions.packageLockingMode();
-        boolean isExistingPackage = rootPackageContext.dependenciesTomlContext().isPresent();
-        if (isExistingPackage) {
-            SemanticVersion prevDistributionVersion = rootPackageContext.dependencyManifest().distributionVersion();
-            SemanticVersion currentDistributionVersion = SemanticVersion.from(RepoUtils.getBallerinaShortVersion());
-            if (prevDistributionVersion == null) {
-                // Built with Update 4 or less
-                if (PackageLockingMode.SOFT != packageLockingMode) {
-                    //  issue a warning unless the update policy is set to SOFT
-                    getWarningForHigherDistribution(project, packageLockingMode).ifPresent(diagnosticList::add);
-                    if (packageLockingMode == null) {
-                        packageLockingMode = PackageLockingMode.SOFT;
-                    }
-                }
-            } else if (isNewUpdateDistribution(prevDistributionVersion, currentDistributionVersion)) {
-                // Built with Update 5 or above, but older than the current Update distribution
-                if (PackageLockingMode.SOFT != packageLockingMode) {
-                    //  issue a warning unless the update policy is set to SOFT
-                    getWarningForHigherDistribution(project, packageLockingMode).ifPresent(diagnosticList::add);
-                    if (packageLockingMode == null) {
-                        packageLockingMode = PackageLockingMode.SOFT;
-                    }
-                }
-            } else if (packageLockingMode == null) {
-                packageLockingMode = PackageLockingMode.MEDIUM;
-            }
-        } else {
-            // new package
-            if (packageLockingMode == null) {
-                if (project.kind() == ProjectKind.BALA_PROJECT) {
-                    packageLockingMode = PackageLockingMode.MEDIUM;
-                    this.resolutionOptions = ResolutionOptions.builder()
-                            .setOffline(resolutionOptions.offline())
-                            .setDumpGraph(resolutionOptions.dumpGraph())
-                            .setDumpRawGraphs(resolutionOptions.dumpRawGraphs())
-                            .setPackageLockingMode(packageLockingMode)
-                            .build();
-                    return;
-                }
-                packageLockingMode = PackageLockingMode.SOFT;
-            } else if (PackageLockingMode.LOCKED.equals(packageLockingMode) || compilationOptions.sticky()) {
-                packageLockingMode = PackageLockingMode.HARD;
-            }
-        }
-
-        // set to hard if the build is within 24 hours
-        if (packageLockingMode == PackageLockingMode.SOFT || packageLockingMode == PackageLockingMode.MEDIUM) {
-            packageLockingMode = ProjectUtils.getPackageLockingMode(project, packageLockingMode);
-        }
-
-        this.resolutionOptions = ResolutionOptions.builder()
-                .setOffline(resolutionOptions.offline())
-                .setDumpGraph(resolutionOptions.dumpGraph())
-                .setDumpRawGraphs(resolutionOptions.dumpRawGraphs())
-                .setPackageLockingMode(packageLockingMode)
-                .build();
-    }
-
     private DependencyGraph<ResolvedPackageDependency> resolveSourceDependencies() {
         // 1) Get PackageLoadRequests for all the direct dependencies of this package
         LinkedHashSet<ModuleLoadRequest> moduleLoadRequests = getModuleLoadRequestsOfDirectDependencies();
 
-        if (PackageLockingMode.LOCKED.equals(this.resolutionOptions.packageLockingMode())) {
-            if (this.rootPackageContext.dependenciesTomlContext().isEmpty()) {
-                reportDiagnostic("'LOCKED' locking mode cannot be used without the " + DEPENDENCIES_TOML + " file",
-                        ProjectDiagnosticErrorCode.MISSING_DEPENDENCIES_TOML_WITH_LOCKED_MODE.diagnosticId(),
-                        DiagnosticSeverity.ERROR, null, rootPackageContext.descriptor());
-
-                return DependencyGraph.emptyGraph();
-            } else {
-
-                List<String> previousImports = new ArrayList<>();
-                try {
-                    BuildJson buildJson = ProjectUtils.readBuildJson(
-                            this.rootPackageContext.project().targetDir().resolve(BUILD_FILE));
-                    List<String> imports = buildJson.imports();
-                    if (imports != null) {
-                        previousImports.addAll(imports);
-                    }
-                } catch (IOException | JsonSyntaxException e) {
-                    // ignore
-                }
-                List<String> currentImports = new ArrayList<>(moduleLoadRequests.stream().filter(
-                        moduleLoadRequest -> moduleLoadRequest.orgName().isPresent()
-                                && !moduleLoadRequest.orgName().get().equals(PackageOrg.BALLERINA_I_ORG)).map(
-                        moduleLoadRequest -> moduleLoadRequest.orgName()
-                                .orElse(this.rootPackageContext.packageOrg())
-                                + "/" + moduleLoadRequest.moduleName()).toList());
-                currentImports.removeAll(previousImports);
-                if (!currentImports.isEmpty()) {
-                    reportDiagnostic("cannot add new imports with --locking-mode=locked. " +
-                                    "Use one of [soft, medium, hard] to build with new imports",
-                            ProjectDiagnosticErrorCode.NEW_IMPORTS_WITH_LOCKED_MODE.diagnosticId(),
-                            DiagnosticSeverity.ERROR, null, rootPackageContext.descriptor());
-
-                    return DependencyGraph.emptyGraph();
-                }
-            }
-        }
-
-        // 2 Update the package locking mode if necessary
-        updateResolutionOptions();
-
-        // 3) Resolve imports to packages and create the complete dependency graph with package metadata
+        // 2) Resolve imports to packages and create the complete dependency graph with package metadata
         ResolutionEngine resolutionEngine = new ResolutionEngine(rootPackageContext.descriptor(),
                 blendedManifest, packageResolver, moduleResolver, resolutionOptions);
         DependencyGraph<DependencyNode> dependencyNodeGraph =
@@ -536,15 +342,9 @@ public class PackageResolution {
                 .filter(depNode -> !depNode.equals(rootNode) // Remove root node from the requests
                         && !depNode.errorNode()) // Remove error nodes from the requests
                 .map(this::createFromDepNode)
-                .toList();
-
+                .collect(Collectors.toList());
         Collection<ResolutionResponse> resolutionResponses =
                 packageResolver.resolvePackages(resolutionRequests, resolutionOptions);
-        List<PackageDescriptor> oldDependencies = new ArrayList<>();
-        List<PackageDescriptor> directDependencies = depGraph.getDirectDependencies(rootNode)
-                .stream()
-                .map(DependencyNode::pkgDesc)
-                .toList();
 
         // Add resolved packages to the container
         for (ResolutionResponse resolutionResp : resolutionResponses) {
@@ -554,18 +354,6 @@ public class PackageResolution {
                 if (Optional.ofNullable(pkgDesc.getDeprecated()).orElse(false)) {
                     addDeprecationDiagnostic(pkgDesc);
                 }
-                try {
-                    String ballerinaVersion = resolutionResp.resolvedPackage().manifest().ballerinaVersion();
-                    SemanticVersion distVersion = SemanticVersion.from(ballerinaVersion);
-                    if (distVersion.lessThan(SemanticVersion.from("2201.12.0"))) {
-                        if (!directDependencies.contains(pkgDesc)) {
-                            oldDependencies.add(pkgDesc);
-                        }
-                    }
-                } catch (ProjectException e) {
-                    // ignore version exception
-                }
-
                 ResolutionRequest resolutionReq = resolutionResp.resolutionRequest();
                 ResolvedPackageDependency resolvedPkg = new ResolvedPackageDependency(
                         resolutionResp.resolvedPackage(),
@@ -573,17 +361,6 @@ public class PackageResolution {
                         resolutionReq.resolutionType());
                 resolvedPkgContainer.add(pkgDesc.org(), pkgDesc.name(), resolvedPkg);
             }
-        }
-        if (!oldDependencies.isEmpty()) {
-            StringBuilder warning = new StringBuilder("The following transitive dependencies were published with a " +
-                    "distribution older than Swan Lake Update 12. It is recommended to execute " +
-                    "'bal build --locking-mode=soft' to ensure compatibility:");
-            // Append the list of old dependencies to the warning message
-            for (PackageDescriptor pkgDesc : oldDependencies) {
-                warning.append("\n\t- ").append(pkgDesc);
-            }
-            reportDiagnostic(warning.toString(), ProjectDiagnosticErrorCode.OLD_IMPORTS.diagnosticId(),
-                    DiagnosticSeverity.WARNING, null, rootPackageContext.descriptor());
         }
 
         // Build the resolved package dependency graph
@@ -602,7 +379,7 @@ public class PackageResolution {
                                 .map(directDepNode -> resolvedPkgContainer.get(
                                         directDepNode.pkgDesc().org(), directDepNode.pkgDesc().name()))
                                 .flatMap(Optional::stream)
-                                .toList();
+                                .collect(Collectors.toList());
                 depGraphBuilder.addDependencies(resolvedPkg, directPkgDependencies);
             }
         }
@@ -707,7 +484,7 @@ public class PackageResolution {
         List<ModuleName> moduleNames = rootPackageContext.moduleIds().stream()
                 .map(rootPackageContext::moduleContext)
                 .map(ModuleContext::moduleName)
-                .toList();
+                .collect(Collectors.toList());
         return new ModuleResolver(rootPackageContext.descriptor(), moduleNames, blendedManifest,
                 projectEnvContext.getService(PackageResolver.class), resolutionOptions);
     }
@@ -721,37 +498,91 @@ public class PackageResolution {
                 projectEnvContext.getService(LocalPackageRepository.class), customPackageRepositoryMap, offline);
     }
 
-    private ResolutionOptions getResolutionOptions(CompilationOptions compilationOptions) {
+    private ResolutionOptions getResolutionOptions(PackageContext rootPackageContext,
+                                                   CompilationOptions compilationOptions) {
+        boolean sticky = ProjectUtils.getSticky(rootPackageContext.project());
+        this.autoUpdate = !sticky;
         PackageLockingMode packageLockingMode;
-        if (compilationOptions.sticky()) {
-            packageLockingMode = PackageLockingMode.HARD;
+        SemanticVersion prevDistributionVersion = rootPackageContext.dependencyManifest().distributionVersion();
+        SemanticVersion currentDistributionVersion = SemanticVersion.from(RepoUtils.getBallerinaShortVersion());
+
+        // For new projects, the locking mode will be SOFT unless sticky == true.
+        // For existing projects, if the package was built with a previous distribution, the locking mode
+        // will be SOFT unless sticky == true. A warning is issued to notify the detection of the new distribution.
+        if ("soft".equals(rootPackageContext.project().buildOptions().compilationOptions().lockingMode())) {
+            packageLockingMode = PackageLockingMode.SOFT;
+            sticky = false;
+        } else if (rootPackageContext.dependenciesTomlContext().isPresent()) {
+            // existing project
+            if (prevDistributionVersion == null) {
+                // Built with Update 4 or less. Therefore, we issue a warning
+                addOlderSLUpdateDistributionDiagnostic(null, currentDistributionVersion);
+                if (!sticky) {
+                    packageLockingMode = PackageLockingMode.SOFT;
+                } else {
+                    packageLockingMode = PackageLockingMode.MEDIUM;
+                }
+            } else {
+                // Built with Update 5 or above
+                boolean newUpdateDistribution =
+                        isNewUpdateDistribution(prevDistributionVersion, currentDistributionVersion);
+                if (newUpdateDistribution) {
+                    addOlderSLUpdateDistributionDiagnostic(prevDistributionVersion, currentDistributionVersion);
+                    packageLockingMode = PackageLockingMode.SOFT;
+                } else {
+                    packageLockingMode = PackageLockingMode.MEDIUM;
+                }
+            }
         } else {
-            packageLockingMode = compilationOptions.lockingMode();
+            // new project
+            if (!sticky) {
+                packageLockingMode = PackageLockingMode.SOFT;
+            } else {
+                packageLockingMode = PackageLockingMode.MEDIUM;
+            }
         }
+
         return ResolutionOptions.builder()
                 .setOffline(compilationOptions.offlineBuild())
+                .setSticky(sticky)
                 .setDumpGraph(compilationOptions.dumpGraph())
                 .setDumpRawGraphs(compilationOptions.dumpRawGraphs())
                 .setPackageLockingMode(packageLockingMode)
                 .build();
     }
 
-    public ResolutionOptions resolutionOptions() {
-        return resolutionOptions;
+    private boolean isNewUpdateDistribution(SemanticVersion prevDistributionVersion,
+                                            SemanticVersion currentDistributionVersion) {
+        return currentDistributionVersion.major() == prevDistributionVersion.major()
+                && currentDistributionVersion.minor() > prevDistributionVersion.minor();
     }
 
-    public List<String> imports() {
-        if (imports == null) {
-            imports = new ArrayList<>();
-            imports = getModuleLoadRequestsOfDirectDependencies().stream()
-                    .filter(moduleLoadRequest -> moduleLoadRequest.orgName().isPresent()
-                            && !moduleLoadRequest.orgName().get().equals(PackageOrg.BALLERINA_I_ORG))
-                    .map(moduleLoadRequest -> moduleLoadRequest.orgName()
-                            .orElse(this.rootPackageContext.packageOrg())
-                            + "/" + moduleLoadRequest.moduleName())
-                    .toList();
+    private void addOlderSLUpdateDistributionDiagnostic(SemanticVersion prevDistributionVersion,
+                                                        SemanticVersion currentDistributionVersion) {
+        String currentVersionForDiagnostic = String.valueOf(currentDistributionVersion.minor());
+        if (currentDistributionVersion.patch() != 0) {
+            currentVersionForDiagnostic += DOT + currentDistributionVersion.patch();
         }
-        return imports;
+        String prevVersionForDiagnostic;
+        if (null != prevDistributionVersion) {
+            prevVersionForDiagnostic = String.valueOf(prevDistributionVersion.minor());
+            if (prevDistributionVersion.patch() != 0) {
+                prevVersionForDiagnostic += DOT + prevDistributionVersion.patch();
+            }
+        } else {
+            prevVersionForDiagnostic = "4 or an older Update";
+        }
+        DiagnosticInfo diagnosticInfo = new DiagnosticInfo(
+                ProjectDiagnosticErrorCode.BUILT_WITH_OLDER_SL_UPDATE_DISTRIBUTION.diagnosticId(),
+                "Detected an attempt to compile this package using Swan Lake Update " + currentVersionForDiagnostic +
+                        ". However, this package was built using Swan Lake Update " + prevVersionForDiagnostic +
+                        ". To ensure compatibility, execute `bal build` with Swan Lake Update "
+                        + currentVersionForDiagnostic + " to update the dependencies with the " +
+                        "latest compatible versions.",
+                DiagnosticSeverity.WARNING);
+        PackageDiagnostic diagnostic = new PackageDiagnostic(diagnosticInfo,
+                rootPackageContext.descriptor().name().toString());
+        diagnosticList.add(diagnostic);
     }
 
     /**
