@@ -17,40 +17,23 @@
  */
 package io.ballerina.projects.internal;
 
+import io.ballerina.fs.Path;
 import io.ballerina.projects.BuildOptions;
 import io.ballerina.projects.DocumentConfig;
 import io.ballerina.projects.PackageConfig;
 import io.ballerina.projects.ProjectException;
 import io.ballerina.projects.TomlDocument;
-import io.ballerina.projects.exceptions.InvalidBalaException;
 import io.ballerina.projects.util.ProjectConstants;
-import io.ballerina.projects.util.ProjectUtils;
-import io.ballerina.tools.diagnostics.DiagnosticInfo;
-import io.ballerina.tools.diagnostics.DiagnosticSeverity;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.PrintStream;
 import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
-import io.ballerina.fs.FileSystem;
-import io.ballerina.fs.FileSystems;
-import io.ballerina.fs.Files;
-import io.ballerina.fs.Path;
-import io.ballerina.fs.PathMatcher;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.ballerina.projects.util.ProjectConstants.DOT;
 import static io.ballerina.projects.util.ProjectConstants.GENERATED_MODULES_ROOT;
-import static io.ballerina.projects.util.ProjectConstants.RESOURCE_DIR_NAME;
 import static io.ballerina.projects.util.ProjectConstants.TEST_DIR_NAME;
-import static io.ballerina.projects.util.ProjectUtils.checkReadPermission;
 
 /**
  * Contains a set of utility methods that create an in-memory representation of a Ballerina project directory.
@@ -59,17 +42,13 @@ import static io.ballerina.projects.util.ProjectUtils.checkReadPermission;
  */
 public final class ProjectFiles {
 
-    private static final PrintStream outStream = System.out;
-
     private ProjectFiles() {
     }
 
     public static PackageData loadSingleFileProjectPackageData(Path filePath) {
-        DocumentData documentData = DocumentData.fromHardcoded("empty.bal", """
-                public function main() {
-                }
-                """);
-
+        DocumentData documentData = DocumentData.fromHardCode("test.bal",
+                "public function main() {\n" +
+                        "}\n");
         ModuleData defaultModule = ModuleData
                 .from(filePath, DOT, Collections.singletonList(documentData), Collections.emptyList(), null);
         return PackageData.from(filePath, defaultModule, Collections.emptyList(),
@@ -81,7 +60,7 @@ public final class ProjectFiles {
         ModuleData defaultModule = loadModule(packageDirPath);
         List<ModuleData> otherModules = loadOtherModules(packageDirPath);
         List<ModuleData> newModules = loadNewGeneratedModules(packageDirPath);
-        otherModules = Stream.concat(otherModules.stream(), newModules.stream()).toList();
+        otherModules = Stream.concat(otherModules.stream(), newModules.stream()).collect(Collectors.toList());
 
         DocumentData ballerinaToml = loadDocument(packageDirPath.resolve(ProjectConstants.BALLERINA_TOML));
         DocumentData dependenciesToml = loadDocument(packageDirPath.resolve(ProjectConstants.DEPENDENCIES_TOML));
@@ -107,131 +86,19 @@ public final class ProjectFiles {
     }
 
     private static List<ModuleData> loadNewGeneratedModules(Path packageDirPath) {
-        Path generatedSourceRoot = packageDirPath.resolve(ProjectConstants.GENERATED_MODULES_ROOT);
-        if (Files.isDirectory(generatedSourceRoot)) {
-            try (Stream<Path> pathStream = Files.walk(generatedSourceRoot, 1)) {
-                return pathStream
-                        .filter(path -> !ProjectConstants.GENERATED_MODULES_ROOT.equals(path.toFile().getName()))
-                        .filter(Files::isDirectory)
-                        .filter(path -> isNewModule(packageDirPath, path))
-                        .filter(path -> {
-                            // validate moduleName
-                            if (!ProjectUtils.validateModuleName(path.toFile().getName())) {
-                                throw new ProjectException("Invalid module name : '" + path.getFileName() + "' :\n" +
-                                        "Module name can only contain alphanumerics, underscores and periods");
-                            }
-                            if (!ProjectUtils.validateNameLength(path.toFile().getName())) {
-                                throw new ProjectException("Invalid module name : '" + path.getFileName() + "' :\n" +
-                                        "Maximum length of module name is 256 characters");
-                            }
-                            return true;
-                        })
-                        .map(ProjectFiles::loadModule)
-                        .toList();
-            } catch (IOException e) {
-                throw new ProjectException(e);
-            }
-        }
-        return Collections.emptyList();
+        throw new RuntimeException();
     }
 
     private static boolean isNewModule(Path packageDirPath, Path path) {
-        String dirName = path.toFile().getName();
-        if (dirName.equals(TEST_DIR_NAME) || dirName.equals(RESOURCE_DIR_NAME)) {
-            return false;
-        }
-        Path modulePath = packageDirPath.resolve(ProjectConstants.MODULES_ROOT).resolve(dirName);
-        return !Files.exists(modulePath);
+        throw new RuntimeException();
     }
 
     private static List<ModuleData> loadOtherModules(Path packageDirPath) {
-        Path modulesDirPath = packageDirPath.resolve("modules");
-        if (!Files.isDirectory(modulesDirPath)) {
-            return Collections.emptyList();
-        }
-
-        try (Stream<Path> pathStream = Files.walk(modulesDirPath, 1)) {
-            return pathStream
-                    .filter(path -> !path.equals(modulesDirPath))
-                    .filter(Files::isDirectory)
-                    .filter(path -> {
-                        // validate moduleName
-                        if (!ProjectUtils.validateModuleName(path.toFile().getName())) {
-                            throw new ProjectException("Invalid module name : '" + path.getFileName() + "' :\n" +
-                                    "Module name can only contain alphanumerics, underscores and periods");
-                        }
-                        if (!ProjectUtils.validateNameLength(path.toFile().getName())) {
-                            throw new ProjectException("Invalid module name : '" + path.getFileName() + "' :\n" +
-                                    "Maximum length of module name is 256 characters");
-                        }
-                        return true;
-                    })
-                    .map(ProjectFiles::loadModule)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new ProjectException(e);
-        }
+        throw new RuntimeException();
     }
 
     private static ModuleData loadModule(Path moduleDirPath) {
-        List<DocumentData> srcDocs = loadDocuments(moduleDirPath);
-        Path testDirPath = moduleDirPath.resolve("tests");
-        List<DocumentData> testSrcDocs = Files.isDirectory(testDirPath) ? loadTestDocuments(testDirPath) :
-                new ArrayList<>();
-
-        // If the module is not a newly generated module, explicitly load generated sources
-        if (!ProjectConstants.GENERATED_MODULES_ROOT.equals(Optional.of(
-                moduleDirPath.toAbsolutePath().getParent()).get().toFile().getName())) {
-            // Generated source root for default module
-            Path generatedSourcesRoot = getGeneratedSourcesRoot(moduleDirPath);
-            if (Files.isDirectory(generatedSourcesRoot)) {
-                List<DocumentData> generatedDocs = loadDocuments(generatedSourcesRoot);
-                verifyDuplicateNames(srcDocs, generatedDocs, moduleDirPath.toFile().getName(), moduleDirPath, false);
-                srcDocs.addAll(generatedDocs);
-                if (Files.isDirectory(generatedSourcesRoot.resolve(TEST_DIR_NAME))) {
-                    List<DocumentData> generatedTestDocs =
-                            loadTestDocuments(generatedSourcesRoot.resolve(TEST_DIR_NAME));
-                    verifyDuplicateNames(testSrcDocs, generatedTestDocs, moduleDirPath.toFile().getName(),
-                            moduleDirPath, true);
-                    testSrcDocs.addAll(generatedTestDocs);
-                }
-            }
-        }
-        DocumentData moduleMd = loadDocument(moduleDirPath.resolve(ProjectConstants.MODULE_MD_FILE_NAME));
-
-        // Warn if there are module level resources
-        Path parentPath = moduleDirPath.getParent();
-        if (parentPath != null && ProjectConstants.MODULES_ROOT.equals(
-                parentPath.toFile().getName())) {
-            List<Path> moduleResources = loadResources(moduleDirPath);
-            if (!moduleResources.isEmpty()) {
-                String warning = "WARNING: module-level resources are not supported. Relocate the module-level " +
-                        "resources detected in '" + moduleDirPath.toFile().getName() + "' to the package " +
-                        "resources path. Resource files:\n" +
-                        moduleResources.stream()
-                                .map(Path::toString)
-                                .collect(Collectors.joining("\n")) + "\n";
-                DiagnosticInfo diagnosticInfo = new DiagnosticInfo(ProjectDiagnosticErrorCode.
-                        DEPRECATED_RESOURCES_STRUCTURE.diagnosticId(), warning, DiagnosticSeverity.WARNING);
-                PackageDiagnostic packageDiagnostic = new PackageDiagnostic(diagnosticInfo, "");
-
-                ProjectUtils.addMiscellaneousProjectDiagnostics(packageDiagnostic);
-            }
-        }
-        // TODO Read Module.md file. Do we need to? Bala creator may need to package Module.md
-        return ModuleData.from(moduleDirPath, moduleDirPath.toFile().getName(), srcDocs, testSrcDocs, moduleMd);
-    }
-
-    private static Path getGeneratedSourcesRoot(Path moduleDirPath) {
-        Path generatedSourcesRoot = moduleDirPath.resolve(ProjectConstants.GENERATED_MODULES_ROOT);
-        if (ProjectConstants.MODULES_ROOT.equals(Optional.of(
-                moduleDirPath.toAbsolutePath().getParent()).get().toFile().getName())) {
-            // generated sources root for non-default modules
-            generatedSourcesRoot = Optional.of(Optional.of(Optional.of(moduleDirPath.toAbsolutePath().getParent()).
-                                    get().getParent()).get().resolve(ProjectConstants.GENERATED_MODULES_ROOT))
-                    .get().resolve(Optional.of(moduleDirPath.toFile()).get().getName());
-        }
-        return generatedSourcesRoot;
+        throw new RuntimeException();
     }
 
     private static void verifyDuplicateNames(List<DocumentData> srcDocs, List<DocumentData> generatedDocs,
@@ -254,103 +121,20 @@ public final class ProjectFiles {
     }
 
     public static List<Path> loadResources(Path packagePath) {
-        Path resourcesPath = packagePath.resolve(ProjectConstants.RESOURCE_DIR_NAME);
-        if (Files.notExists(resourcesPath)) {
-            return Collections.emptyList();
-        }
-        try {
-            checkReadPermission(packagePath);
-        } catch (UnsupportedOperationException ignore) {
-            // ignore for zip entries
-        }
-        try (Stream<Path> pathStream = Files.walk(resourcesPath, 10)) {
-            return pathStream
-                    .filter(Files::isRegularFile)
-                    .toList();
-        } catch (IOException e) {
-            throw new ProjectException(e);
-        }
+        throw new RuntimeException();
     }
 
     public static List<DocumentData> loadDocuments(Path dirPath) {
-        try {
-            checkReadPermission(dirPath);
-        } catch (UnsupportedOperationException ignore) {
-            // ignore for zip entries
-        }
-        try (Stream<Path> pathStream = Files.walk(dirPath, 1)) {
-            return pathStream
-                    .filter(Files::isRegularFile)
-                    .map(ProjectFiles::loadDocument)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new ProjectException(e);
-        }
-    }
-
-    private static List<DocumentData> loadTestDocuments(Path dirPath) {
-        try {
-            checkReadPermission(dirPath);
-        } catch (UnsupportedOperationException ignore) {
-            // ignore for zip entries
-        }
-        try (Stream<Path> pathStream = Files.walk(dirPath, 1)) {
-            return pathStream
-                    .map(ProjectFiles::loadTestDocument)
-                    .collect(Collectors.toList());
-        } catch (IOException e) {
-            throw new ProjectException(e);
-        }
+        throw new RuntimeException();
     }
 
     public static DocumentData loadDocument(Path documentFilePath) {
-        if (Files.notExists(documentFilePath)) {
-            return null;
-        }
-        try {
-            checkReadPermission(documentFilePath);
-        } catch (UnsupportedOperationException ignore) {
-            // ignore for zip entries
-        }
-        return getDocumentData(documentFilePath, false);
-    }
-
-    private static DocumentData loadTestDocument(Path documentFilePath) {
-        try {
-            checkReadPermission(documentFilePath);
-        } catch (UnsupportedOperationException ignore) {
-            // ignore for zip entries
-        }
-        return getDocumentData(documentFilePath, true);
-    }
-
-    // Helper method to handle file system logic for loading document content
-    private static DocumentData getDocumentData(Path documentFilePath, boolean isTest) {
-        return getDocumentData(documentFilePath, isTest, StandardCharsets.UTF_8);
+        throw new RuntimeException();
     }
 
     // Overloaded helper to allow custom Charset
     public static DocumentData getDocumentData(Path documentFilePath, boolean isTest, Charset charset) {
-        FileSystem fileSystem = documentFilePath.getFileSystem();
-        String documentName = Optional.of(documentFilePath.getFileName()).get().toString();
-        String finalName = isTest ? ProjectConstants.TEST_DIR_NAME + "/" + documentName : documentName;
-        if (fileSystem.equals(FileSystems.getDefault())) {
-            Supplier<String> contentSupplier = () -> {
-                try {
-                    return Files.readString(documentFilePath, charset);
-                } catch (IOException e) {
-                    throw new ProjectException(e);
-                }
-            };
-            return DocumentData.from(finalName, contentSupplier);
-        } else {
-            try {
-                String content = Files.readString(documentFilePath, charset);
-                return DocumentData.from(finalName, content);
-            } catch (IOException e) {
-                throw new ProjectException(e);
-            }
-        }
+        throw new RuntimeException();
     }
 
     public static BuildOptions createBuildOptions(PackageConfig packageConfig, BuildOptions theirOptions,
@@ -372,81 +156,18 @@ public final class ProjectFiles {
     }
 
     public static void validateBuildProjectDirPath(Path projectDirPath) {
-        if (Files.notExists(projectDirPath)) {
-            throw new ProjectException("The directory does not exist: " + projectDirPath);
-        }
-
-        if (!Files.isDirectory(projectDirPath)) {
-            throw new ProjectException("Invalid Ballerina package directory: " + projectDirPath);
-        }
-
-        if (!ProjectUtils.isBallerinaProject(projectDirPath)) {
-            throw new ProjectException("Invalid Ballerina package directory: " + projectDirPath +
-                    ", cannot find 'Ballerina.toml' file.");
-        }
-
-        checkReadPermission(projectDirPath);
-    }
-
-    public static void validateSingleFileProjectFilePath(Path filePath) {
-        if (Files.notExists(filePath)) {
-            throw new ProjectException("The file does not exist: " + filePath);
-        }
-
-        if (!Files.isRegularFile(filePath)) {
-            throw new ProjectException("Invalid Ballerina source file(.bal): " + filePath);
-        }
-
-        // Check if it is inside a project
-        Path projectRoot = ProjectUtils.findProjectRoot(filePath);
-        if (null != projectRoot) {
-            Path absFilePath = filePath.toAbsolutePath();
-            if (projectRoot.equals(absFilePath.getParent())) {
-                throw new ProjectException("The source file '" + filePath + "' belongs to a Ballerina package.");
-            }
-            // Check if it is inside a module
-            Path modulesRoot = projectRoot.resolve(ProjectConstants.MODULES_ROOT);
-            Path parent = absFilePath.getParent();
-            if (parent != null && modulesRoot.equals(parent.getParent())) {
-                throw new ProjectException("The source file '" + filePath + "' belongs to a Ballerina package.");
-            }
-        }
-        checkReadPermission(filePath);
+        throw new RuntimeException();
     }
 
     public static void validateBalaProjectPath(Path balaPath) {
-        if (Files.notExists(balaPath)) {
-            throw new ProjectException("Given bala path does not exist: " + balaPath);
-        }
-
-        if (!isValidBalaFile(balaPath) && !isValidBalaDir(balaPath)) {
-            throw new InvalidBalaException("invalid bala file: " + balaPath);
-        }
-
-        if (!balaPath.toFile().canRead()) {
-            throw new ProjectException("insufficient privileges to bala: " + balaPath);
-        }
+        throw new RuntimeException();
     }
 
     private static boolean isValidBalaDir(Path balaPath) {
-        if (Files.notExists(balaPath.resolve(ProjectConstants.DEPENDENCY_GRAPH_JSON))) {
-            return false;
-        }
-        if (Files.notExists(balaPath.resolve(ProjectConstants.PACKAGE_JSON))) {
-            return false;
-        }
-        if (Files.notExists(balaPath.resolve(ProjectConstants.BALA_JSON))) {
-            return false;
-        }
-        Path modulesRoot = balaPath.resolve(ProjectConstants.MODULES_ROOT);
-        File[] files = modulesRoot.toFile().listFiles();
-        if (files == null) {
-            return false;
-        }
-        return Files.isDirectory(modulesRoot) && files.length >= 1;
+        throw new RuntimeException();
     }
 
     private static boolean isValidBalaFile(Path balaPath) {
-        return Files.isRegularFile(balaPath);
+        throw new RuntimeException();
     }
 }
